[project]
name = "string-fixer"
description = "Change quote style in Python files"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Crozzers", email = "captaincrozzers@gmail.com" }]
dynamic = ["version"]

dependencies = [
    "libcst",
    "tomli"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only"
]

[project.urls]
Source = "https://github.com/Crozzers/string-fixer"
Issues = "https://github.com/Crozzers/string-fixer/issues"

[project.optional-dependencies]
dev = [
    "ruff"
]
test = [
    "pytest",
    "pytest-snapshot"
]
all = ["string-fixer[dev,test]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "src._version.__version__" }

[tool.setuptools.packages.find]
include = ["src"]

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.string-fixer]
target="src"
dry_run=false
ignore = [
    "test/**"
]
